[gd_scene load_steps=11 format=2]

[ext_resource path="res://Title/Background.png" type="Texture" id=1]
[ext_resource path="res://Title/How_To_Play.png" type="Texture" id=2]
[ext_resource path="res://Title/Title.png" type="Texture" id=3]
[ext_resource path="res://Title/Settings_Normal.png" type="Texture" id=4]
[ext_resource path="res://Title/Play_Hover.png" type="Texture" id=5]
[ext_resource path="res://TitleScreen.gd" type="Script" id=6]
[ext_resource path="res://Title/Button.gd" type="Script" id=7]
[ext_resource path="res://Music and Sounds/Button_Sound.mp3" type="AudioStream" id=8]
[ext_resource path="res://Title/Play_Normal.png" type="Texture" id=9]
[ext_resource path="res://Title/Settings_Hover.png" type="Texture" id=10]

[node name="Title" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 1277.33, 178.333 )
scale = Vector2( 0.618186, 0.618186 )
texture = ExtResource( 3 )

[node name="How_To_Play" type="Sprite" parent="."]
position = Vector2( 338.739, 534.076 )
scale = Vector2( 1.57407, 1.57407 )
texture = ExtResource( 2 )

[node name="Play" type="TextureButton" parent="."]
margin_left = 1070.31
margin_top = 693.694
margin_right = 1541.31
margin_bottom = 860.694
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 5 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Settings" type="TextureButton" parent="."]
margin_left = 1791.11
margin_top = 953.367
margin_right = 1910.11
margin_bottom = 1073.37
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Play" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
